--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,11 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="133dp"
         android:layout_height="62dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginBottom="112dp"
         android:backgroundTint="#03A9F4"
         android:text="Previous"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -40,10 +38,12 @@
         android:layout_width="133dp"
         android:layout_height="62dp"
         android:layout_marginStart="48dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="112dp"
         android:backgroundTint="#03A9F4"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button" />
 
     <TextView
