--- a/app/src/main/res/layout/new_screen2.xml
+++ b/app/src/main/res/layout/new_screen2.xml
@@ -14,27 +14,36 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="133dp"
             android:layout_height="62dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginBottom="112dp"
             android:backgroundTint="#03A9F4"
             android:text="Previous"
-            tools:layout_editor_absoluteX="53dp"
-            tools:layout_editor_absoluteY="553dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/button8"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="133dp"
             android:layout_height="62dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginBottom="112dp"
             android:background="#03A9F4"
             android:text="Next"
-            tools:layout_editor_absoluteX="225dp"
-            tools:layout_editor_absoluteY="553dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="245dp"
             android:layout_height="246dp"
-            app:srcCompat="@android:drawable/ic_menu_camera"
-            tools:layout_editor_absoluteX="83dp"
-            tools:layout_editor_absoluteY="212dp" />
+            android:layout_marginStart="83dp"
+            android:layout_marginTop="196dp"
+            android:layout_marginEnd="83dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
