--- a/app/src/main/res/layout/new_screen3.xml
+++ b/app/src/main/res/layout/new_screen3.xml
@@ -14,27 +14,38 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="133dp"
             android:layout_height="62dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginBottom="112dp"
             android:backgroundTint="#03A9F4"
             android:text="Next"
-            tools:layout_editor_absoluteX="226dp"
-            tools:layout_editor_absoluteY="572dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.551"
+            app:layout_constraintStart_toEndOf="@+id/button10" />
 
         <Button
             android:id="@+id/button10"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="133dp"
             android:layout_height="62dp"
+            android:layout_marginStart="49dp"
+            android:layout_marginBottom="112dp"
             android:backgroundTint="#03A9F4"
             android:text="Previous"
-            tools:layout_editor_absoluteX="51dp"
-            tools:layout_editor_absoluteY="572dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="298dp"
-            android:layout_height="280dp"
-            app:srcCompat="@android:drawable/ic_menu_camera"
-            tools:layout_editor_absoluteX="51dp"
-            tools:layout_editor_absoluteY="151dp" />
+            android:layout_width="262dp"
+            android:layout_height="207dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="244dp"
+            android:layout_marginEnd="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
