--- a/app/src/main/res/layout/new_screen4.xml
+++ b/app/src/main/res/layout/new_screen4.xml
@@ -14,27 +14,35 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="133dp"
             android:layout_height="62dp"
+            android:layout_marginStart="49dp"
+            android:layout_marginBottom="112dp"
             android:backgroundTint="#03A9F4"
             android:text="Previous"
-            tools:layout_editor_absoluteX="49dp"
-            tools:layout_editor_absoluteY="565dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/button12"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="133dp"
             android:layout_height="62dp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginBottom="112dp"
             android:backgroundTint="#03A9F4"
             android:text="Next"
-            tools:layout_editor_absoluteX="220dp"
-            tools:layout_editor_absoluteY="565dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="280dp"
             android:layout_height="235dp"
-            app:srcCompat="@android:drawable/ic_menu_camera"
-            tools:layout_editor_absoluteX="65dp"
-            tools:layout_editor_absoluteY="221dp" />
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="221dp"
+            android:layout_marginEnd="66dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
