--- a/app/src/main/res/layout/activity_job_list.xml
+++ b/app/src/main/res/layout/activity_job_list.xml
@@ -7,7 +7,7 @@
     tools:context=".JobListActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/TitleTextView"
         android:layout_width="163dp"
         android:layout_height="41dp"
         android:layout_marginStart="98dp"
@@ -35,39 +35,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintTop_toBottomOf="@+id/TitleTextView"/>
 
-    <TextView
-        android:id="@+id/CustomerNameTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="86dp" />
 
-    <TextView
-        android:id="@+id/AddressTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="86dp" />
 
-    <TextView
-        android:id="@+id/VehicleTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="86dp" />
-
-    <TextView
-        android:id="@+id/JobTypeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="86dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
