Added codes for logging out.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:text="Fleet Dynamics"
-        android:textColor="#E7E5F1"
+        android:textColor="#BCF3DD"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="16dp"
-        android:background="#C7C2C2"
+        android:background="#E0E0E0"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -51,7 +51,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
-        android:background="#C7C2C2"
+        android:background="#E0E0E0"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -71,6 +71,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="32dp"
+        android:background="@color/colorPrimary"
         android:text="LOGIN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -83,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="New Here? Sign Up"
-        android:textColor="#E4E4B2"
+        android:textColor="#09E98D"
         android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
