--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:text="Fleet Dynamics"
-        android:textColor="#EDEDF3"
+        android:textColor="#BCF3DD"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:background="#C7C2C2"
+        android:background="#E0E0E0"
         android:ems="10"
         android:hint="Full Name"
         android:inputType="textPersonName"
@@ -67,7 +67,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="#C7C2C2"
+        android:background="#E0E0E0"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -87,7 +87,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="#C7C2C2"
+        android:background="#E0E0E0"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -106,6 +106,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:background="@color/colorPrimary"
         android:text="Create"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +118,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Already Registered? Login Here"
-        android:textColor="#E9E99F"
+        android:textColor="#09E98D"
         android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
