--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/button14"
+            android:id="@+id/DamageMapButton"
             android:layout_width="218dp"
             android:layout_height="148dp"
             android:layout_marginStart="8dp"
@@ -43,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button14"
+            app:layout_constraintTop_toBottomOf="@+id/DamageMapButton"
             app:srcCompat="@drawable/common_full_open_on_phone" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
