--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="8dp"
         android:text="Job Schedule"
-        app:layout_constraintBottom_toTopOf="@+id/button14"
+        app:layout_constraintBottom_toTopOf="@+id/DamageMapButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button14"
+        android:id="@+id/DamageMapButton"
         android:layout_width="312dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
@@ -30,7 +30,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="8dp"
         android:text="Damage map"
-        app:layout_constraintBottom_toTopOf="@+id/button15"
+        app:layout_constraintBottom_toTopOf="@+id/CollectionButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,10 +48,10 @@
         app:layout_constraintBottom_toTopOf="@+id/LogOutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button16" />
+        app:layout_constraintTop_toBottomOf="@+id/DeliveryButton" />
 
     <Button
-        android:id="@+id/button16"
+        android:id="@+id/DeliveryButton"
         android:layout_width="312dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
@@ -62,9 +62,9 @@
         app:layout_constraintBottom_toTopOf="@+id/button17"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button15" />
+        app:layout_constraintTop_toBottomOf="@+id/CollectionButton" />
     <Button
-        android:id="@+id/button15"
+        android:id="@+id/CollectionButton"
         android:layout_width="312dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
@@ -72,10 +72,10 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="14dp"
         android:text="Collection "
-        app:layout_constraintBottom_toTopOf="@+id/button16"
+        app:layout_constraintBottom_toTopOf="@+id/DeliveryButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button14" />
+        app:layout_constraintTop_toBottomOf="@+id/DamageMapButton" />
 
     <Button
         android:id="@+id/LogOutButton"
