--- a/app/src/main/res/layout/activity_deliveryy.xml
+++ b/app/src/main/res/layout/activity_deliveryy.xml
@@ -1,40 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:sign="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.kyanogen.signatureview.SignatureView
         android:id="@+id/delsignature"
         android:layout_width="411dp"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
 
+        android:layout_marginTop="81dp"
+        android:layout_marginBottom="11dp"
         sign:backgroundColor="#E7FAFC"
         sign:enableSignature="true"
+        sign:layout_constraintBottom_toTopOf="@+id/deliverycancel"
+        sign:layout_constraintEnd_toEndOf="parent"
+        sign:layout_constraintHorizontal_bias="1.0"
+        sign:layout_constraintStart_toStartOf="parent"
+        sign:layout_constraintTop_toTopOf="parent"
+        sign:layout_constraintVertical_bias="0.0"
         sign:penColor="#F1000000"
         sign:penSize="6dp" />
 
     <Button
         android:id="@+id/delclear"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="66dp"
         android:backgroundTintMode="multiply"
-        android:text="Clear"
-        android:visibility="visible" />
+        android:text="@string/clear"
+        android:visibility="visible"
+        sign:layout_constraintBottom_toBottomOf="parent"
+        sign:layout_constraintEnd_toEndOf="parent"
+        sign:layout_constraintStart_toEndOf="@+id/delieverysave" />
 
     <Button
         android:id="@+id/delieverysave"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginBottom="68dp"
         android:backgroundTintMode="multiply"
-        android:text="@string/save" />
+        android:text="@string/save"
+        sign:layout_constraintBottom_toBottomOf="parent"
+        sign:layout_constraintEnd_toStartOf="@+id/delclear"
+        sign:layout_constraintStart_toStartOf="parent"
+        sign:layout_constraintTop_toBottomOf="@+id/deliverycancel"
+        sign:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/deliverycancel"
         android:layout_width="412dp"
         android:layout_height="50dp"
-        android:text="@string/cancel" />
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/cancel"
+        sign:layout_constraintBottom_toTopOf="@+id/delclear"
+        sign:layout_constraintEnd_toEndOf="parent"
+        sign:layout_constraintHorizontal_bias="0.0"
+        sign:layout_constraintStart_toStartOf="parent"
+        sign:layout_constraintTop_toBottomOf="@+id/delsignature" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="198dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="206dp"
+        android:layout_marginBottom="30dp"
+        android:text="@string/signature"
+        sign:layout_constraintBottom_toTopOf="@+id/delsignature"
+        sign:layout_constraintEnd_toEndOf="parent"
+        sign:layout_constraintHorizontal_bias="0.500"
+        sign:layout_constraintStart_toStartOf="parent"
+        sign:layout_constraintTop_toTopOf="parent"
+        sign:layout_constraintVertical_bias="0.400" />
+</androidx.constraintlayout.widget.ConstraintLayout>
