--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,10 +6,16 @@
         <group android:checkableBehavior="single">
 
             <item android:id="@+id/nav_message"
-                  android:icon="@drawable/ic_event_note_black_24dp"
+                  android:icon="@drawable/ic_format_list_bulleted_black_24dp"
                     android:title="Job List"/>
+            <item android:id="@+id/nav_delivery"
+                android:icon="@drawable/ic_arrow_forward_black_24dp"
+                android:title="Delivery"/>
+            <item android:id="@+id/nav_collection"
+                android:icon="@drawable/ic_arrow_back_black_24dp"
+                android:title="Collection"/>
             <item android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_exit_to_app_black_24dp"
-                android:title="Job List"/>
+                android:title="Log out"/>
         </group>
 </menu>
