--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,7 +5,7 @@
 
         <group android:checkableBehavior="single">
 
-            <item android:id="@+id/nav_message"
+            <item android:id="@+id/nav_joblist"
                   android:icon="@drawable/ic_format_list_bulleted_black_24dp"
                     android:title="Job List"/>
             <item android:id="@+id/nav_delivery"
