--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,15 +7,20 @@
 
             <item android:id="@+id/nav_joblist"
                   android:icon="@drawable/ic_format_list_bulleted_black_24dp"
+                    android:textColor="#FFFFFF"
                     android:title="Job List"/>
             <item android:id="@+id/nav_delivery"
-                android:icon="@drawable/ic_arrow_forward_black_24dp"
-                android:title="Delivery"/>
+                android:icon="@drawable/ic_arrow_forward_white_24dp"
+                android:title="Delivery"
+                android:textColor="#FFFFFF"/>
+
             <item android:id="@+id/nav_collection"
-                android:icon="@drawable/ic_arrow_back_black_24dp"
-                android:title="Collection"/>
+                android:icon="@drawable/ic_arrow_back_white_24dp"
+                android:title="Collection"
+                android:textColor="#FFFFFF"/>
             <item android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_exit_to_app_black_24dp"
-                android:title="Log out"/>
+                android:icon="@drawable/ic_exit_to_app_white_24dp"
+                android:title="Log out"
+                android:textColor="#FFFFFF"/>
         </group>
 </menu>
