connect to firebase

--- a/app/src/main/res/layout/activity_deliveryy.xml
+++ b/app/src/main/res/layout/activity_deliveryy.xml
@@ -9,10 +9,10 @@
     <com.kyanogen.signatureview.SignatureView
         android:id="@+id/delsignature"
         android:layout_width="411dp"
-        android:layout_height="450dp"
+        android:layout_height="400dp"
 
         android:layout_marginTop="81dp"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="8dp"
         sign:backgroundColor="#E7FAFC"
         sign:enableSignature="true"
         sign:layout_constraintBottom_toTopOf="@+id/deliverycancel"
@@ -28,42 +28,34 @@
         android:id="@+id/delclear"
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginTop="100dp"
         android:backgroundTintMode="multiply"
         android:text="@string/clear"
         android:visibility="visible"
-        sign:layout_constraintBottom_toBottomOf="parent"
         sign:layout_constraintEnd_toEndOf="parent"
-        sign:layout_constraintStart_toEndOf="@+id/delieverysave" />
+        sign:layout_constraintStart_toEndOf="@+id/deliverycancel"
+        sign:layout_constraintTop_toBottomOf="@+id/delsignature" />
 
     <Button
         android:id="@+id/delieverysave"
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginTop="100dp"
         android:backgroundTintMode="multiply"
         android:text="@string/save"
-        sign:layout_constraintBottom_toBottomOf="parent"
-        sign:layout_constraintEnd_toStartOf="@+id/delclear"
         sign:layout_constraintStart_toStartOf="parent"
-        sign:layout_constraintTop_toBottomOf="@+id/deliverycancel"
-        sign:layout_constraintVertical_bias="1.0" />
+        sign:layout_constraintTop_toBottomOf="@+id/delsignature" />
 
     <Button
         android:id="@+id/deliverycancel"
-        android:layout_width="412dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="115dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="90dp"
         android:text="@string/cancel"
-        sign:layout_constraintBottom_toTopOf="@+id/delclear"
-        sign:layout_constraintEnd_toEndOf="parent"
-        sign:layout_constraintHorizontal_bias="0.0"
+        sign:layout_constraintBottom_toBottomOf="parent"
+        sign:layout_constraintEnd_toStartOf="@+id/delclear"
         sign:layout_constraintStart_toStartOf="parent"
         sign:layout_constraintTop_toBottomOf="@+id/delsignature" />
 
@@ -74,8 +66,11 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="206dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="25dp"
+        android:autoText="true"
+        android:backgroundTint="#2196F3"
         android:text="@string/signature"
+        android:textSize="20sp"
         sign:layout_constraintBottom_toTopOf="@+id/delsignature"
         sign:layout_constraintEnd_toEndOf="parent"
         sign:layout_constraintHorizontal_bias="0.500"
