--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,6 +8,7 @@
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
 
+
     >
 
 
@@ -22,14 +23,14 @@
         android:layout_width="wrap_content"
         android:paddingTop="8dp"
         android:text="Joe Bloggs"
-        android:textColor="#FFFFFF"
+        android:textColor="#ECECEC"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/nav_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
+        android:textColor="#ECECEC"
         android:text="JoeBloggs@example.com" />
 
 </LinearLayout>
