--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -15,10 +15,8 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/DamageMapButton"
@@ -50,12 +48,12 @@
 
         <TextView
             android:id="@+id/titleView"
-            android:layout_width="156dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="111dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="112dp"
-            android:layout_marginBottom="17dp"
+            android:layout_width="146dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="102dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="131dp"
+            android:layout_marginBottom="24dp"
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/DamageMapButton"
             app:layout_constraintEnd_toEndOf="parent"
